@@ -1,6 +1,6 @@
 ###############################################################################
 # Makefile for the DMalloc library.
-# $Id: Makefile.all.in,v 1.85 2000/03/21 01:56:20 gray Exp $
+# $Id: Makefile.all.in,v 1.86 2000/03/21 20:08:15 gray Exp $
 ###############################################################################
 
 # default root installation directory
@@ -142,9 +142,6 @@ $(LIB_TH) : $(OBJS) $(THREAD_OBJS)
 $(LIB_DIS) : dmalloc_lp.o
 	ar cr $@ $?
 	@RANLIB@ $@
-
-noansi : dmalloc.h Deansify.pl
-	perl $(srcdir)/Deansify.pl *.[ch]
 
 utils : $(UTIL)
 
